# yandex_projects

./: .gitignore  .pylintrc  README.md  pyproject.toml
sprint_10_numerical_methods/: README.md  car_price_prediction.ipynb
sprint_11_time_series/: README.md  taxi_workload_prediction.ipynb
sprint_12_intro_to_NLP/: README.md  description_toxicity.ipynb
sprint_15_final_project/: README.md
sprint_2_EDA/: README.md  saint_petersburg_real_estate.ipynb
sprint_4_first_checkpoint/: README.md  computer_games_shop.ipynb
sprint_5_intro_to_machine_learning/: README.md  megaline_telecom_operator.ipynb
sprint_6_supervised_learning/: README.md  beta_bank_customer_churn.ipynb
sprint_7_machine_learning_in_business/: README.md  best_oil_region.ipynb
sprint_8_second_checkpoint/: README.md  golden_ore_processing.ipynb
sprint_9_linear_algebra/: README.md  data_protection_with_linear_regression.ipynb
